# inmotion-mcp-server

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/inmotion_mcp/: __init__.py  config.py
