[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "inmotion-mcp"
version = "1.0.0"
description = "MCP server exposing Notion, n8n, and Gmail tools to an LLM agent layer."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mcp>=1.2.0", "httpx>=0.27.0", "pydantic>=2.6.0"]

[project.scripts]
inmotion-mcp = "inmotion_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
